--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kaue-oenning</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+  
 
-    <meta property="og:title" content="kaue-oenning-folio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Kauê Oenning" />
+    <meta property="og:description" content="Este é o portfólio do Kauê Oenning" />
     <meta property="og:type" content="website" />
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/9942/9942147.png" type="image/png" />
 
